# rados-drip

./: .clang-tidy  .gitignore  .line-limits.json  AGENTS.md  CMakeLists.txt  README.md
app/: config.cc  config_new.cc  config_new.h  delete.cc  delete_options.cc  delete_options.h  drip.cc  drip_options.cc  drip_options.h  main.cc
cli/: CMakeLists.txt  parser.cc  parser.h  parser_test.cc
client/: client.cc  client.h  object.cc  object.h  pool_context.cc  pool_context.h  rados_error.cc  rados_error.h
config/: config.cc  config.h
docs/: google-test-benchmark.md  google_cpp_style.md  vscode-cpp-linux-extensions.md
options/: options.cc  options.h
scripts/: check_file_lines.py
simple/: simple.cc  simple.h  simple_benchmark.cc  simple_test.cc
tests/: test_check_file_lines.py
